<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_bg"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="@dimen/device_set_layout_padding">

        <com.example.qiaoguan.learncollection.ViewLearn.GroupLayout
            style="@style/CommonGroupLayout"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ds_nick_name_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/device_set_layout_height"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/ds_nick_name"
                        android:textColor="@color/common_text"
                        android:textSize="@dimen/device_set_sub_text_size" />

                    <TextView
                        android:id="@+id/ds_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="测试"
                        android:textColor="@color/common_sub_text" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0"
                    android:src="@mipmap/device_setting_next" />


            </LinearLayout>

        </com.example.qiaoguan.learncollection.ViewLearn.GroupLayout>

        <LinearLayout
            android:id="@+id/ds_participants_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/device_set_layout_height"
            android:layout_marginTop="@dimen/device_set_layout_padding"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/device_set_padding"
            android:paddingRight="@dimen/device_set_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/common_text"
                android:text="@string/ds_share_name"
                android:textSize="@dimen/device_set_sub_text_size" />

            <TextView
                android:id="@+id/ds_share_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="分享者名字"
                android:textColor="@color/common_sub_text"
                android:textSize="@dimen/device_set_text_size" />

        </LinearLayout>

        <com.example.qiaoguan.learncollection.ViewLearn.GroupLayout
                style="@style/CommonGroupLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/device_set_layout_padding">

                <LinearLayout
                    android:id="@+id/ds_connect_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/device_set_layout_height"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/device_set_padding"
                    android:paddingRight="@dimen/device_set_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/common_text"
                        android:layout_weight="1"
                        android:text="@string/ds_connect_name"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0"
                        android:src="@mipmap/device_setting_next" />
                </LinearLayout>

                <LinearLayout
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/ds_sys_setting"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="@dimen/device_set_layout_height"
                    android:gravity="center_vertical"
                    android:background="@drawable/grouplayout_item_bg_selector"
                    android:paddingLeft="@dimen/device_set_padding"
                    android:paddingRight="@dimen/device_set_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ds_sys_setting"
                        android:textColor="@color/common_text"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0"
                        android:src="@mipmap/device_setting_next" />

                </LinearLayout>


            </com.example.qiaoguan.learncollection.ViewLearn.GroupLayout>

        <com.example.qiaoguan.learncollection.ViewLearn.GroupLayout
            style="@style/CommonGroupLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/device_set_layout_padding">

            <LinearLayout
                android:id="@+id/ds_device_serial_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/device_set_layout_height"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/device_set_padding"
                android:paddingRight="@dimen/device_set_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/common_text"
                    android:text="@string/ds_serial_num"
                    android:textSize="@dimen/device_set_sub_text_size" />

                <TextView
                    android:id="@+id/ds_device_serial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="1234567"
                    android:textColor="@color/common_sub_text"
                    android:textSize="@dimen/device_set_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ds_net_mode_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/device_set_layout_height"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/device_set_padding"
                android:paddingRight="@dimen/device_set_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/common_text"
                    android:text="@string/ds_net_mode"
                    android:textSize="@dimen/device_set_sub_text_size" />

                <TextView
                    android:id="@+id/ds_net_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text=""
                    android:textColor="@color/common_sub_text"
                    android:textSize="@dimen/device_set_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ds_device_state_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/device_set_layout_height"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/device_set_padding"
                android:paddingRight="@dimen/device_set_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/common_text"
                    android:text="@string/ds_state"
                    android:textSize="@dimen/device_set_sub_text_size" />

                <TextView
                    android:id="@+id/ds_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="在线"
                    android:textColor="@color/common_sub_text"
                    android:textSize="@dimen/device_set_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ds_group_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/device_set_layout_height"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/device_set_padding"
                android:paddingRight="@dimen/device_set_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/common_text"
                    android:text="@string/ds_groups"
                    android:textSize="@dimen/device_set_sub_text_size" />

                <TextView
                    android:id="@+id/ds_groups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="测试"
                    android:textColor="@color/common_sub_text"
                    android:textSize="@dimen/device_set_text_size" />

            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/ds_remarks"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/device_set_layout_height"
                android:gravity="center_vertical"
                android:background="@drawable/grouplayout_item_bg_selector"
                android:paddingLeft="@dimen/device_set_padding"
                android:paddingRight="@dimen/device_set_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ds_remarks"
                    android:textColor="@color/common_text"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0"
                    android:src="@mipmap/device_setting_next" />

            </LinearLayout>

        </com.example.qiaoguan.learncollection.ViewLearn.GroupLayout>


    </LinearLayout>
</ScrollView>